[workspace]
resolver = "2"
members = [
    "gldf-rs-lib",
    "gldf-rs-wasm",
    "gldf-rs-python",
    "gldf-rs-ffi",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Holger Trahe <trahe@mac.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/holg/gldf-rs"
homepage = "https://github.com/holg/gldf-rs"

[workspace.dependencies]
# Core library
gldf-rs = { path = "gldf-rs-lib" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["rt", "test-util", "macros"] }
async-std = "1.12"

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls"] }
reqwest-wasm = { version = "0.11", features = ["blocking"] }

# Compression
zip = { version = "0.6", features = ["deflate", "time"], default-features = false }

# Utilities
regex = "1.10"
base64 = "0.22"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = "0.3"
gloo = "0.11"
yew = { version = "0.21", features = ["csr"] }

# Python
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py37"] }
