[package]
name = "gldf_rs_python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/holg/gldf-rs-python"
homepage = "https://github.com/holg/gldf-rs-python"
documentation = "https://docs.rs/gldf-rs/"
description = "Python Module of the GLDF (General Lighting Data Format) parser and writer for Rust, specifically for the Rust/WASM target as such designed for JSON format"

[lib]
name = "gldf_rs_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library
gldf-rs = { version = "0.3.1", path = "../gldf-rs-lib" }

# Python bindings
pyo3.workspace = true

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]

[build-dependencies]
version_check = "0.9"
pyo3-build-config = "0.22"
