[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "gldf_rs_python"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

