[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "gldf-rs-python"
version = "0.3.1"
description = "Python bindings for GLDF (General Lighting Data Format) parsing library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    { name = "Holger Trahe" }
]
keywords = ["gldf", "lighting", "photometry", "eulumdat", "ies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://gldf.icu"
Repository = "https://github.com/holg/gldf-rs"
Documentation = "https://docs.rs/gldf-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
