[package]
name = "gldf-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bevy-based 3D scene viewer for GLDF files with L3D models and LDT photometric lighting"

[lib]
name = "gldf_bevy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gldf-bevy-viewer"
path = "src/main.rs"

[features]
default = []
webgl2 = []
# Enable localStorage sync for WASM hot-reload (requires wasm-bindgen)
wasm-sync = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
# Enable standalone binary (for gldf-rs-wasm integration)
# Disable when embedding in another WASM app to avoid duplicate wasm_start
standalone = ["wasm-sync"]

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }

# WASM build: add webgl2 feature to Bevy
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = { workspace = true }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "webgl2",
    "tonemapping_luts",
    "png",
] }
console_error_panic_hook = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = { workspace = true }
serde_json = { workspace = true }
# wasm-bindgen dependencies are optional, enabled by wasm-sync feature
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Window", "Storage", "console"], optional = true }

[dependencies]
# GLDF parsing
gldf-rs.workspace = true

# L3D 3D model parsing
l3d_rs.workspace = true

# Photometric data
eulumdat.workspace = true

# Reuse lighting plugins from eulumdat-bevy
eulumdat-bevy.workspace = true

# Error handling
anyhow.workspace = true
log.workspace = true

# Serialization
serde.workspace = true

# Bevy 3D engine (same pattern as eulumdat-bevy)
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",
    "wayland",
] }
