[package]
name = "gldf-rs-slint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform GLDF viewer using Slint UI - works on Windows, macOS, Linux, and embedded systems"

[[bin]]
name = "gldf-viewer"
path = "src/main.rs"

[dependencies]
# Core GLDF library
gldf-rs = { path = "../gldf-rs-lib" }

# UI framework
slint = "1.8"

# File dialogs
rfd = "0.15"

# Error handling
anyhow.workspace = true

# Async runtime (for file dialogs)
pollster = "0.4"

# Serialization (for settings)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.8"

[features]
default = ["backend-winit"]
# Different backends for different platforms
backend-winit = ["slint/backend-winit"]
backend-qt = ["slint/backend-qt"]
# For embedded without GPU
renderer-software = ["slint/renderer-software"]
