[package]
name = "gldf-starsky-wasm"
version = "0.1.0"
edition = "2021"
description = "Lightweight 2D star sky visualization for GLDF - Tribute to Astrophysics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holg/gldf-rs"
keywords = ["gldf", "stars", "astrophysics", "wasm", "canvas"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "DomRect",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Storage",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
